# sapu

./: LICENSE  README.md  pyproject.toml
.vim/: coc-settings.json
app/: aerich.ini
app/contrib/: secrets-sample
app/ext/: database.py
app/migrations/models/: 2_20201029202958_None.json  3_20201029203051_add_user.json
app/models/: __init__.py  user_model.py
