[tool.poetry]
name = "sapu"
version = "0.1.0"
description = "Sistema de Autenticação e Autorização de usuários"
authors = ["Jônatas Oliveira <contato@jonatasoliveira.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.2"
fastapi = "^0.61.1"
tortoise-orm = "^0.16.17"
pytest = "^6.1.1"
pytest-mock = "^3.3.1"
gunicorn = "^20.0.4"
uvicorn = "^0.12.2"
asyncpg = "^0.21.0"
pep8 = "^1.7.1"

[tool.poetry.dev-dependencies]
jedi = "^0.17.2"
neovim = "^0.3.1"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
